--- a/public/index.html
+++ b/public/index.html
@@ -330,36 +330,40 @@
 
 模式
 操作符
+说明
 
 
 
 
 只读
 r
+文件必须存在
 
 
 只写
 w
+文件不存在则创建，文件存在则清空文件内容
 
 
 追加
 a
+文件不存在则创建，文件存在则在文件末尾添加内容
 
 
 读写
-r+b
+r+
+
 
 
 写读
-w+b
+w+
+
 
 
 追加
-a+b
+a+
 
 
-
-在python中，以什么样的方式出来文件是比较重要的，如果你以只读的方式打开文件，那你就不能写操作以只写
           ...
 
           <div class="post-more-link text-center">
